[gd_scene load_steps=4 format=2]

[ext_resource path="res://combat/AllyPortraits.gd" type="Script" id=1]
[ext_resource path="res://combat/AllyCombatDisplay.tscn" type="PackedScene" id=2]
[ext_resource path="res://dialogic/ChatDialog.tscn" type="PackedScene" id=3]

[node name="AllyPortraits" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ally1" parent="." instance=ExtResource( 2 )]
margin_left = 155.0
margin_top = 896.0
margin_right = 695.0
margin_bottom = 1976.0

[node name="Ally2" parent="." instance=ExtResource( 2 )]
margin_left = 725.0
margin_top = 896.0
margin_right = 1265.0
margin_bottom = 1976.0

[node name="Ally3" parent="." instance=ExtResource( 2 )]
margin_left = 1304.0
margin_top = 896.0
margin_right = 1844.0
margin_bottom = 1976.0

[node name="TargetIcons" type="Node2D" parent="."]

[node name="ChatDialog" parent="." instance=ExtResource( 3 )]
character_prefix = "e:"

[node name="ChatDialog2" parent="." instance=ExtResource( 3 )]
margin_left = 702.0
margin_right = 1191.0

[node name="ChatDialog3" parent="." instance=ExtResource( 3 )]
margin_left = 1278.0
margin_right = 1767.0
character_prefix = "a:"
